- User notification improvements.
- New Wiki web, wiki.ejbca.org.

For upgrade instructions, please se UPGRADE. 
There are database upgrades in this release so please pay attention!

Because there are binary files in EJBCA_HOME/lib and many massive changes there is no patch file for upgrading
EJBCA 3.5.x to 3.6.0. Use the full package from EJBCA 3.6.0 and follow the upgrade instructions.

EJBCA 3.5.5
-----------
This is a minor release, fixing a few bugs and adding support for dual authentication for CATokens.
 - LDAPPublisher initialized the fakeCRL incorrectly
 - Add support for the fields PostalCode and BusinessCategory, now natively supported by BouncyCastle.
 - Add Approval option for activation of CAToken

EJBCA 3.5.4
-----------
This is a minor release, fixing a few bugs.
- A configuration file according to the Sun notation can now be used when creating keys on PKCS11 HSMs.
- A DB synchronization bug is fixed. Before two EJBCAs could update the log table with same sequence number.

Read the changelog for details.

This is a plug-in upgrade from 3.5.x. See UPGRADE for the simple instructions.

EJBCA 3.5.3
-----------
This is a minor release, fixing a few bugs and introducing a new tool.

Notable changes are:
- Support for AEP KeyPer HSM using the EJBCA tools.
- Fix for broken pkcs11HSM.sh.
- A new tool for stress testing over the WS-API.

Read the changelog for details.

This is a plug-in upgrade from 3.5.x. See UPGRADE for the simple instructions.

EJBCA 3.5.2
-----------
This is a minor release, fixing some bugs and introducing some minor improvements.

Notable changes are:
- Support for Luna HSM was broken
- Files for building debian package included
- Portugeese translation of Admin-GUI
- Optimized CRL generation for generating CRLs with more than 100.000 revoked certificate
- Possible to use altNames in External RA SCEP service, and require a specific password 
- Several bugfixes related to using external CAs
- and other minor fixes... 
