@@ -52,7 +52,7 @@ CREATE TABLE "APPROVALDATA" (
  "REQADMINCERTSN" VARCHAR2(255 byte), 
  "STATUS" NUMBER(10) NOT NULL, 
  "APPROVALDATA" VARCHAR2(4000 byte), 
- "REQUESTDATA" LONG, 
+ "REQUESTDATA" CLOB, 
  "REQUESTDATE" NUMBER(19)  NOT NULL, 
  "EXPIREDATE" NUMBER(19)  NOT NULL, 
  "REMAININGAPPROVALS" NUMBER(10) NOT NULL, 
@@ -76,7 +76,7 @@ CREATE TABLE "CADATA" (
     "STATUS" NUMBER(10) NOT NULL, 
 "EXPIRETIME" NUMBER(19) NOT NULL, 
 "UPDATETIME" NUMBER(19) NOT NULL, 
-"DATA" LONG, 
+"DATA" CLOB, 
     CONSTRAINT "PK_CADATA" PRIMARY KEY("CAID") 
 );
 
@@ -93,7 +93,7 @@ CREATE TABLE "CERTIFICATEDATA" (
  "EXPIREDATE"  NUMBER(19) NOT NULL, 
 "REVOCATIONDATE" NUMBER(19) NOT NULL, 
     "REVOCATIONREASON" NUMBER(10) NOT NULL, 
-"BASE64CERT" LONG, 
+"BASE64CERT" CLOB, 
     "USERNAME" VARCHAR2(255 byte), 
     CONSTRAINT "PK_CERTIFICATEDATA" PRIMARY KEY("FINGERPRINT") 
 );
@@ -114,7 +114,7 @@ CREATE TABLE "CERTREQHISTORYDATA" (
  "ISSUERDN" VARCHAR2(255 byte), 
     "SERIALNUMBER" VARCHAR2(255 byte),
  "TIMESTAMP" NUMBER(19) NOT NULL,
- "USERDATAVO" LONG, 
+ "USERDATAVO" CLOB, 
 "USERNAME" VARCHAR2(255 byte), 
     CONSTRAINT "PK_CERTREQHISTORYDATA" PRIMARY KEY("FINGERPRINT")
 );
@@ -129,7 +129,7 @@ CREATE TABLE "CRLDATA" (
     "THISUPDATE" NUMBER(19) NOT NULL, 
 "NEXTUPDATE" NUMBER(19) NOT NULL, 
 "DELTACRLINDICATOR" NUMBER(10) NOT NULL,
-"BASE64CRL" LONG, 
+"BASE64CRL" CLOB, 
     CONSTRAINT "PK_CRLDATA" PRIMARY KEY("FINGERPRINT") 
 );
      
@@ -187,7 +187,7 @@ CREATE TABLE "HARDTOKENPROFILEDATA" (
 "ID" NUMBER(10) NOT NULL, 
 "NAME" VARCHAR2(255 byte), 
 "UPDATECOUNTER" NUMBER(10)  NOT NULL, 
-"DATA" LONG, 
+"DATA" CLOB, 
     CONSTRAINT "PK_HARDTOKENPROFILEDATA" PRIMARY KEY("ID")
 ); 
 
@@ -207,7 +207,7 @@ CREATE TABLE "KEYRECOVERYDATA" (
  "ISSUERDN" VARCHAR2(255 byte) NOT NULL, 
     "USERNAME" VARCHAR2(255 byte),
  "MARKEDASRECOVERABLE"  NUMBER(1) NOT NULL,
- "KEYDATA" LONG, 
+ "KEYDATA" CLOB, 
     CONSTRAINT "PK_KEYRECOVERYDATA" PRIMARY KEY("CERTSN", "ISSUERDN") 
 );
      
@@ -293,7 +293,7 @@ CREATE TABLE "PUBLISHERDATA" (
  "ID" NUMBER(10) NOT NULL, 
  "NAME" VARCHAR2(255 byte),
  "UPDATECOUNTER" NUMBER(10) NOT NULL, 
- "DATA" LONG, 
+ "DATA" CLOB, 
     CONSTRAINT "PK_PUBLISHERDATA" PRIMARY KEY("ID") 
 );
 
@@ -302,7 +302,7 @@ DROP TABLE SERVICEDATA;
 CREATE TABLE "SERVICEDATA" (
  "ID" NUMBER(10) NOT NULL, 
  "NAME" VARCHAR2(255 byte),
- "DATA" LONG, 
+ "DATA" CLOB, 
     CONSTRAINT "PK_SERVICEDATA" PRIMARY KEY("ID") 
 );
 
@@ -341,7 +341,7 @@ CREATE TABLE "USERDATA" (
     "CERTIFICATEPROFILEID" NUMBER(10) NOT NULL,
  "TOKENTYPE"  NUMBER(10) NOT NULL, 
 "HARDTOKENISSUERID" NUMBER(10) NOT NULL,
-    "EXTENDEDINFORMATIONDATA" LONG, 
+    "EXTENDEDINFORMATIONDATA" CLOB, 
 "KEYSTOREPASSWORD"  VARCHAR2(255 byte), 
     CONSTRAINT "PK_USERDATA" PRIMARY KEY("USERNAME") 
 );
@@ -352,6 +352,6 @@ CREATE TABLE "USERDATASOURCEDATA" (
  "ID" NUMBER(10) NOT NULL, 
  "NAME" VARCHAR2(255 byte), 
  "UPDATECOUNTER" NUMBER(10) NOT NULL, 
- "DATA" LONG, 
+ "DATA" CLOB, 
     CONSTRAINT "PK_USERDATASOURCEDATA" PRIMARY KEY("ID")
 ); 
