@@ -31,7 +31,7 @@
 <cmp-field>
   <field-name>requestData</field-name>
   <jdbc-type>LONGVARCHAR</jdbc-type>
-  <sql-type>LONG</sql-type>
+  <sql-type>CLOB</sql-type>
 </cmp-field>
 <cmp-field>
   <field-name>requestDate</field-name>
