@@ -13,7 +13,7 @@
 <cmp-field>
   <field-name>userDataVO</field-name>
   <jdbc-type>LONGVARCHAR</jdbc-type>
-  <sql-type>LONG</sql-type>
+  <sql-type>CLOB</sql-type>
 </cmp-field>
 <cmp-field>
   <field-name>username</field-name>
