@@ -35,5 +35,5 @@
 <cmp-field>
   <field-name>base64Cert</field-name>
   <jdbc-type>LONGVARCHAR</jdbc-type>
-  <sql-type>LONG</sql-type>
+  <sql-type>CLOB</sql-type>
 </cmp-field>
