@@ -13,5 +13,5 @@
 <cmp-field>
   <field-name>keyData</field-name>
   <jdbc-type>LONGVARCHAR</jdbc-type>
-  <sql-type>LONG</sql-type>
+  <sql-type>CLOB</sql-type>
 </cmp-field>
